--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             padding: 0;
             background-color: #f4f4f4; /* Color de fondo */
         }
+            /* Estilos para la imagen de encabezado */
+        .header {
+            width: 100%;
+            height: auto;
+        }
 
         /* Estilos para la barra de navegación */
         .tab {
