--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 </head>
 <body>
 
+    <!-- Imagen de encabezado -->
+<img src="ruta/a/tu/imagen.jpg" alt="Encabezado" class="header">
+    
 <!-- Barra de navegación con pestañas -->
 <div class="tab">
     <button class="tablinks" onclick="openTab(event, 'Intro')">Introducción</button>
