--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
 
     <!-- Imagen de encabezado -->
-<img src="ruta/a/tu/imagen.jpg" alt="Encabezado" class="header">
+<img src="Logo SM.jpeg" alt="Encabezado" class="header">
     
 <!-- Barra de navegación con pestañas -->
 <div class="tab">
