--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <!-- Contenedor para el encabezado y las pestañas -->
 <div class="header-tab-container">
     <!-- Imagen de encabezado -->
-    <img src="ruta/a/tu/imagen.jpg" alt="Encabezado" class="header">
+    <img src="https://github.com/JorgeAragonAburto/MaveriicksSpace/blob/main/Logo%20SM.jpeg" alt="Encabezado" class="header">
     
     <!-- Barra de navegación con pestañas -->
     <div class="tab">
