--- a/index.html
+++ b/index.html
@@ -83,16 +83,7 @@
 <!-- Contenido de la pestaña Introducción -->
 <div id="Intro" class="tabcontent">
     <h3>Introducción</h3>
-    <p>Problemática
-bla bla bla bla 
-una vez al año, Veracruz sufre de inundaciones y de calvicie
-
-
-causas de la problemática
-
-contexto "alcantarillas se tapan, la filtración del agua en el subsuelo es deficiente"
-
-Es necesario tomar cartas en el asunto</p>
+    <p>Problemática bla bla bla bla una vez al año, Veracruz sufre de inundaciones y de calvicie causas de la problemática contexto "alcantarillas se tapan, la filtración del agua en el subsuelo es deficiente" Es necesario tomar cartas en el asunto</p>
 </div>
 
 <!-- Contenido de la pestaña Mapa -->
