--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         /* Estilos para la imagen de encabezado */
         .header {
-            width: 100px;
+            width: 100%;
             height: auto;
             margin-right: 20px; /* Espacio entre la imagen y las pestañas */
         }
@@ -68,7 +68,7 @@
 <!-- Contenedor para el encabezado y las pestañas -->
 <div class="header-tab-container">
     <!-- Imagen de encabezado -->
-    <img src="https://github.com/JorgeAragonAburto/MaveriicksSpace/blob/main/LogoUV.jpeg" alt="Encabezado" class="header">
+    <img src="https://github.com/JorgeAragonAburto/MaveriicksSpace/blob/main/LogoSM.jpeg" alt="Encabezado" class="header">
     
     <!-- Barra de navegación con pestañas -->
     <div class="tab">
