--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         /* Estilos básicos para la página */
         body {
-            font-family: Arial, sans-serif; /* Tipo de letra */
+            font-family: Times New Romans, sans-serif; /* Tipo de letra */
             margin: 0;
             padding: 0;
             background-color: #f4f4f4; /* Color de fondo */
@@ -22,7 +22,7 @@
 
         /* Estilos para la imagen de encabezado */
         .header {
-            width: 100%;
+            width: 100px;
             height: auto;
             margin-right: 20px; /* Espacio entre la imagen y las pestañas */
         }
@@ -68,7 +68,7 @@
 <!-- Contenedor para el encabezado y las pestañas -->
 <div class="header-tab-container">
     <!-- Imagen de encabezado -->
-    <img src="https://github.com/JorgeAragonAburto/MaveriicksSpace/blob/main/LogoSM.jpeg" alt="Encabezado" class="header">
+    <img src="ruta/a/tu/imagen.jpg" alt="Encabezado" class="header">
     
     <!-- Barra de navegación con pestañas -->
     <div class="tab">
@@ -83,7 +83,8 @@
 <!-- Contenido de la pestaña Introducción -->
 <div id="Intro" class="tabcontent">
     <h3>Introducción</h3>
-    <p>Problemática bla bla bla bla una vez al año, Veracruz sufre de inundaciones y de calvicie causas de la problemática contexto "alcantarillas se tapan, la filtración del agua en el subsuelo es deficiente" Es necesario tomar cartas en el asunto</p>
+    <p>Problemática&nbsp;</p>
+    <p>Problemática&nbsp;</p>
 </div>
 
 <!-- Contenido de la pestaña Mapa -->
